--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>mk.ukim.finki.wp.exam</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>example</name>
-    <description>Example Exam</description>
+    <name>Players</name>
+    <description>Players</description>
 
     <properties>
         <java.version>8</java.version>
