--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>mk.ukim.finki.wp.exam</groupId>
+    <groupId>mk.ukim.finki.wp</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Players</name>
